# phd

./: CMakeLists.txt  README.md  install_dependencies.sh  issues.md  package.xml  plot_maps.py  plot_result.py  start_experiments.sh  start_interface.sh
config/: experiment.rviz
docker/: install_docker.sh  install_packages.sh  start_docker.sh
docs/: discursion.md  issues.md  real.md  roadmap.md
environments/gazebo_worlds/: empty.world  (+14 more)
experiments_sets/: I-amcl  II-global  II-navfn  III-dwa  III-eband  III-teb  IV-four  IV-three  V-common  V-social  VI  VI-approach  VI-interaction  VI-marathon  VI-marathon-amcl  VII-marathon  _test  set_1-amcl  set_1-base  set_1-dwa  set_1-eband  set_1-fl  set_1-teb  set_2-carrot  set_2-eband  set_2-global  set_2-navfn  set_2-teb  set_3  set_3-dwa  set_3-eband  set_3-teb  set_4  set_4-eband  set_4-teb  set_5  set_6  set_all  set_test
launch/: start.launch  teste.launch
scrips/: plot_result.py  start_gym.sh  start_interface.sh
scripts/: path_finder.py  plot_maps.py  plot_result.py  start_experiment.sh  start_gym.sh  start_interface.sh  start_real.sh  start_simulation.sh
src/: experiment.py  extract_data.py  pedsim_to_social.py  pub_locals_objects.py
srv/: NewEpisode.srv
tests/: interface.sh  teste_real.sh  teste_real_simulation.sh  teste_simulation_0.sh  teste_simulation_1.sh  teste_simulation_2.sh  teste_simulation_m.sh
worlds/: fei_k5__interaction_passive_dynamic.world  fei_k5__interaction_passive_object.world  fei_k5__interaction_passive_person.world  fei_k5__interaction_passive_static.world  fei_k5__marathon_3.world
(+96 files in other folders)
