<?xml version="1.0"?>
<package format="2">
  <name>phd</name>
  <version>0.0.0</version>
  <description>The phd package</description>

  <maintainer email="alunos@todo.todo">alunos</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend
    >
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>social_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>social_msgs</build_export_depend>
  <build_export_depend>message_generation</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>social_msgs</exec_depend>
  <exec_depend>message_generation</exec_depend>


  <export>

  </export>

</package>
